--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             effectively.
           </p>
           <button class="c-btn h-btn mt-3 py-3 px-5 rounded-pill">
-            <a href="Aravinth_resume.pdf" download="AravinthResume" style="text-decoration: none; color: #fff;">
+            <a href="AravinthKannan_resume.pdf" download="AravinthResume" style="text-decoration: none; color: #fff;">
               Download CV
             </a>
           </button>
@@ -250,7 +250,7 @@
               <span class="badge bg-secondary badge-pill">Dart</span>
               <span class="badge bg-secondary badge-pill">Flutter</span>
               <span class="badge bg-secondary badge-pill mb-2">MobileApp</span><br />
-              <a href="#" class="link">Read More</a>
+              <a href="https://github.com/Aravinthkannan2002?tab=repositories" class="link" target="_blank">View Project</a>
             </div>
           </div>
         </div>
@@ -262,7 +262,7 @@
               <span class="badge bg-secondary badge-pill">Dart</span>
               <span class="badge bg-secondary badge-pill">Flutter</span>
               <span class="badge bg-secondary badge-pill mb-2">MobileApp</span><br />
-              <a href="#" class="read-more-btn link">Read More</a>
+              <a href="https://github.com/Aravinthkannan2002?tab=repositories" class="read-more-btn link" target="_blank">View Project</a>
             </div>
           </div>
         </div>
@@ -274,11 +274,12 @@
               <span class="badge bg-secondary badge-pill">HTML&CSS</span>
               <span class="badge bg-secondary badge-pill">JavaScript</span>
               <span class="badge bg-secondary badge-pill mb-2">bootstrap</span><br />
-              <a href="#" class="read-more-btn link">Read More</a>
+              <a href="https://github.com/Aravinthkannan2002?tab=repositories" class="read-more-btn link" target="_blank">View Project</a>
             </div>
           </div>
         </div>
       </div>
+    
       <div class="row justify-content-evenly mt-4 px-4">
         <div class="post col-md-4 game all col-10 mt-3 mt-md-0" data-aos="fade-up">
           <div class="card">
@@ -288,7 +289,7 @@
               <span class="badge bg-secondary badge-pill">Dart</span>
               <span class="badge bg-secondary badge-pill">Flutter</span>
               <span class="badge bg-secondary badge-pill mb-2">MobileApp</span><br />
-              <a href="#" class="read-more-btn link">Read More</a>
+              <a href="https://github.com/Aravinthkannan2002?tab=repositories" class="read-more-btn link" target="_blank">View Project</a>
             </div>
           </div>
         </div>
@@ -300,7 +301,7 @@
               <span class="badge bg-secondary badge-pill">Dart</span>
               <span class="badge bg-secondary badge-pill">Flutter</span>
               <span class="badge bg-secondary badge-pill mb-2">Game</span><br />
-              <a href="#" class="read-more-btn link">Read More</a>
+              <a href="https://github.com/Aravinthkannan2002?tab=repositories" class="read-more-btn link" target="_blank">View Project</a>
             </div>
           </div>
         </div>
@@ -312,13 +313,13 @@
               <span class="badge bg-secondary badge-pill">Dart</span>
               <span class="badge bg-secondary badge-pill">Flutter</span>
               <span class="badge bg-secondary badge-pill mb-2">MobileApp</span><br />
-              <a href="#" class="read-more-btn link">Read More</a>
+              <a href="https://github.com/Aravinthkannan2002?tab=repositories" class="read-more-btn link" target="_blank">View Project</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  </section>
+    
   <!-- portfolio section ends here -->
 
   <!-- testimonial section starts  -->
