Fix testimonial name: Gayathri Jayakumar to Gayathri Jaikumaran

--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
                         implemented push notifications flawlessly. His attention to detail and reliability made
                         collaboration effortless."
                       </p>
-                      <h4>Gayathri Jayakumar</h4>
+                      <h4>Gayathri Jaikumaran</h4>
                       <small class="fs-6 text-muted">Senior Backend Developer at TalentTurbo Technologies Pvt.
                         Ltd.</small>
                     </div>
