Add AK branded favicon with gradient

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aravinth Kannan | Flutter Developer Portfolio</title>
+  <link rel="icon" type="image/svg+xml" href="images/favicon.svg" />
   <meta name="description" content="Aravinth Kannan - Mobile Application Developer with 2+ years of Flutter experience. Building high-performance cross-platform apps." />
 
   <!-- bootstrap css cdn link  -->
