Add custom cursor animation on mouse move

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 </head>
 
 <body>
+  <!-- Custom Cursor -->
+  <div class="cursor-dot"></div>
+  <div class="cursor-outline"></div>
+
   <!-- navbar starts -->
   <nav id="navbar-top" class="navbar navbar-expand-lg navbar-light sticky-top">
     <div class="container-fluid px-3 px-md-4 px-lg-5">
