Restructure project with clean architecture and organized folder structure
- Split CSS into style.css + chatbot.css under assets/css/
- Split JS into main.js + chatbot.js under assets/js/
- Organize images into assets/images/projects/ with kebab-case names
- Move resume to assets/documents/
- Remove 21 unused images
- Add .gitignore
- Update ReadMe.md with new structure

--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Aravinth Kannan | Flutter Developer Portfolio</title>
-  <link rel="icon" type="image/svg+xml" href="images/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="assets/images/favicon.svg" />
   <meta name="description" content="Aravinth Kannan - Mobile Application Developer with 2+ years of Flutter experience. Building high-performance cross-platform apps." />
 
   <!-- bootstrap css cdn link  -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
 
-  <!-- custom css file -->
-  <link rel="stylesheet" href="css/style.css" />
+  <!-- custom css files -->
+  <link rel="stylesheet" href="assets/css/style.css" />
+  <link rel="stylesheet" href="assets/css/chatbot.css" />
 
   <!-- google font link -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,7 +31,7 @@
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
   <!-- preload hero image for instant display -->
-  <link rel="preload" href="images/banner.png" as="image" />
+  <link rel="preload" href="assets/images/banner.png" as="image" />
 
   <!-- jquery cdn link  -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
@@ -112,7 +113,7 @@
       </div>
       <!-- Add margin to the second div for spacing -->
       <div class="col-10 col-md-4 d-none d-md-block mt-4 mt-md-0">
-        <img src="images/banner.png" class="img-fluid" alt="Aravinth Kannan - Flutter Developer" loading="eager" fetchpriority="high" />
+        <img src="assets/images/banner.png" class="img-fluid" alt="Aravinth Kannan - Flutter Developer" loading="eager" fetchpriority="high" />
       </div>
     </div>
 
@@ -279,7 +280,7 @@
             DIO, and Firebase services including Auth, Firestore, FCM, and Dynamic Links.
           </p>
           <button class="c-btn h-btn mt-3 py-3 px-5 rounded-pill">
-            <a href="Documents/Aravinth_Kannan_Resume.pdf" download="Aravinth_Kannan_Resume"
+            <a href="assets/documents/Aravinth_Kannan_Resume.pdf" download="Aravinth_Kannan_Resume"
               style="text-decoration: none; color: #fff;">
               Download CV
             </a>
@@ -312,7 +313,7 @@
 
         <div class="post col-md-4 game all col-10 mt-3 mt-md-0" data-aos="fade-up">
           <div class="card">
-            <img src="images/photo_sharing.png" class="card-img-top" alt="..." />
+            <img src="assets/images/projects/photo-sharing.png" class="card-img-top" alt="..." />
             <div class="card-body text-center">
               <h4 class="card-title">Photo sharing App</h4>
               <span class="badge bg-secondary badge-pill">Dart</span>
@@ -325,7 +326,7 @@
         </div>
         <div class="post col-md-4 game webapp all col-10 mt-3 mt-md-0" data-aos="fade-up">
           <div class="card">
-            <img src="images/tt.avif" class="card-img-top" alt="..." />
+            <img src="assets/images/projects/talent-turbo.avif" class="card-img-top" alt="..." />
             <div class="card-body text-center">
               <h4 class="card-title">Talent Turbo App</h4>
               <span class="badge bg-secondary badge-pill">Flutter</span>
@@ -338,7 +339,7 @@
         </div>
         <div class="post col-md-4 game webapp all col-10 mt-3 mt-md-0" data-aos="fade-up">
           <div class="card">
-            <img src="images/homiefix.webp" class="card-img-top" alt="..." />
+            <img src="assets/images/projects/homiefix.webp" class="card-img-top" alt="..." />
             <div class="card-body text-center">
               <h4 class="card-title">HomieFix App</h4>
               <span class="badge bg-secondary badge-pill">Flutter</span>
@@ -351,7 +352,7 @@
         </div>
         <div class="post col-md-4 game all col-10 mt-3 mt-md-0" data-aos="fade-up">
           <div class="card">
-            <img src="images/mechanic_App 1.png" class="card-img-top" alt="..." />
+            <img src="assets/images/projects/mvahnaa.png" class="card-img-top" alt="..." />
             <div class="card-body text-center">
               <h4 class="card-title">M Vahnaa App</h4>
               <span class="badge bg-secondary badge-pill">Dart</span>
@@ -364,7 +365,7 @@
         </div>
         <div class="post col-md-4 website game all col-10 mt-3 mt-md-0" data-aos="fade-up">
           <div class="card">
-            <img src="images/doctor.png" class="card-img-top" alt="..." />
+            <img src="assets/images/projects/doctor-appointment.png" class="card-img-top" alt="..." />
             <div class="card-body text-center">
               <h4 class="card-title">Doctor Appointment Scheduling App</h4>
               <span class="badge bg-secondary badge-pill">Dart</span>
@@ -379,7 +380,7 @@
         <div class="post col-md-4 website game all all col-10 mt-3 mt-md-0" data-aos="fade-up">
           <!-- //bus -->
           <div class="card">
-            <img src="images/bus_tracking.png" class="card-img-top" alt="..." />
+            <img src="assets/images/projects/bus-tracking.png" class="card-img-top" alt="..." />
             <div class="card-body text-center">
               <h4 class="card-title">Bus Tracking App</h4>
               <span class="badge bg-secondary badge-pill">Dart</span>
@@ -397,7 +398,7 @@
       <div class="row justify-content-evenly mt-4 px-4">
         <div class="post col-md-4  website game all col-10 mt-3 mt-md-0" data-aos="fade-up">
           <div class="card">
-            <img src="images/WHATSAPP 1.png" class="card-img-top" alt="..." />
+            <img src="assets/images/projects/whatsapp-clone.png" class="card-img-top" alt="..." />
             <div class="card-body text-center">
               <h4 class="card-title">WhatsApp Clone</h4>
               <span class="badge bg-secondary badge-pill">Dart</span>
@@ -410,7 +411,7 @@
         </div>
         <div class="post col-md-4 website game all col-10 mt-3 mt-md-0" data-aos="fade-up">
           <div class="card">
-            <img src="images/tic 1.png" class="card-img-top" alt="..." />
+            <img src="assets/images/projects/tictactoe.png" class="card-img-top" alt="..." />
             <div class="card-body text-center">
               <h4 class="card-title">TicTacToe Game</h4>
               <span class="badge bg-secondary badge-pill">Dart</span>
@@ -424,7 +425,7 @@
         <!-- //login/signup -->
         <div class="post col-md-4 website  all col-10 mt-3 mt-md-0" data-aos="fade-up">
           <div class="card">
-            <img src="images/LOGIN SIGNUP 1.png" class="card-img-top" alt="..." />
+            <img src="assets/images/projects/login-signup.png" class="card-img-top" alt="..." />
             <div class="card-body text-center">
               <h4 class="card-title">Login and Signup Ui</h4>
               <span class="badge bg-secondary badge-pill">Dart</span>
@@ -444,7 +445,7 @@
     <section class="testimonial mt-5 pt-5" id="testimonial">
       <div class="row justify-content-evenly">
         <div class="col-md-4 col-10" data-aos="slide-right">
-          <img src="images/tastimonials-img.png" class="img-fluid" alt="" />
+          <img src="assets/images/testimonials.png" class="img-fluid" alt="" />
         </div>
         <div class="col-md-6 col-10 mt-5" data-aos="slide-left">
           <div class="heading">
@@ -548,7 +549,7 @@
       <div class="row justify-content-evenly px-4 mt-4" data-aos="fade-up">
         <div class="blogpost col-md-4 col-10 mt-2 mt-md-0 game all">
           <div class="card">
-            <img src="images/WHATSAPP 1.png" class="card-img-top rounded-4" alt="..." />
+            <img src="assets/images/projects/whatsapp-clone.png" class="card-img-top rounded-4" alt="..." />
             <div class="card-body px-4">
               <small>By Aravinth</small><span class="ms-3">Mar 2025</span>
               <h4 class="card-title">
@@ -564,7 +565,7 @@
         </div>
         <div class="blogpost col-md-4 col-10 mt-5 mt-md-0 website all">
           <div class="card">
-            <img src="images/CHATBOT 1.png" class="card-img-top rounded-4" alt="..." />
+            <img src="assets/images/projects/chatbot-project.png" class="card-img-top rounded-4" alt="..." />
             <div class="card-body px-4">
               <small>By Aravinth</small><span class="ms-3">Jan 2026</span>
               <h4 class="card-title">
@@ -580,7 +581,7 @@
         </div>
         <div class="blogpost col-md-4 col-10 mt-5 mt-md-0 webapp all">
           <div class="card">
-            <img src="images/ECOMMERCE 1.png" class="card-img-top rounded-4" alt="..." />
+            <img src="assets/images/projects/ecommerce.png" class="card-img-top rounded-4" alt="..." />
             <div class="card-body px-4">
               <small>By Aravinth</small><span class="ms-3">Feb 2026</span>
               <h4 class="card-title">
@@ -604,7 +605,7 @@
 
               <div class="modal-body px-4">
                 <div class="img">
-                  <img src="images/WHATSAPP 1.png" class="img-fluid" alt="WhatsApp Clone">
+                  <img src="assets/images/projects/whatsapp-clone.png" class="img-fluid" alt="WhatsApp Clone">
                 </div>
                 <div class="content mt-3">
                   <small>By Aravinth</small><span class="text-muted ms-2">Mar 2025</span>
@@ -669,7 +670,7 @@
 
               <div class="modal-body px-4">
                 <div class="img">
-                  <img src="images/CHATBOT 1.png" class="img-fluid" alt="Chatbot Image">
+                  <img src="assets/images/projects/chatbot-project.png" class="img-fluid" alt="Chatbot Image">
                 </div>
                 <div class="content mt-3">
                   <small>By Aravinth</small><span class="text-muted ms-2 ms-md-0">Jan 2026</span>
@@ -733,7 +734,7 @@
 
               <div class="modal-body px-4">
                 <div class="img">
-                  <img src="images/ECOMMERCE 1.png" class="img-fluid" alt="">
+                  <img src="assets/images/projects/ecommerce.png" class="img-fluid" alt="">
                 </div>
                 <div class="content mt-3">
                   <small>By Aravinth</small><span class="text-muted ms-2 ms-md-0">Feb 2026</span>
@@ -980,8 +981,9 @@
         offset: 50,
       });
     </script>
-    <!-- custom js file linking -->
-    <script src="js/script.js"></script>
+    <!-- custom js files -->
+    <script src="assets/js/main.js"></script>
+    <script src="assets/js/chatbot.js" defer></script>
 
 </body>
 
