Add offline detection UI with toast banner and chatbot guard

--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 </head>
 
 <body>
+  <!-- Offline Toast -->
+  <div id="offline-toast" class="offline-toast">
+    <i class="bi bi-wifi-off"></i>
+    <span>You're offline. Check your internet connection.</span>
+  </div>
+
   <!-- Custom Cursor -->
   <div class="cursor-dot"></div>
   <div class="cursor-outline"></div>
