Update hero badge text to Open to Work

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="row justify-content-evenly align-items-center">
       <!-- First div with some margin -->
       <div class="col-10 col-md-6 text-center text-md-start">
-        <small class="hero-badge">Available for Freelance Projects</small>
+        <small class="hero-badge">Open to Work</small>
         <h2 style="color: #3f396d">
           Hello! I Am <br /><span class="c-orange">Aravinth Kannan</span>
         </h2>
